--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
 	<title>Leverage edu</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+	<script>
+	function myFunction() {
+  		alert("You presssed me");
+	}
+</script>
 	<div class="header">
+		<h1>
+			Your Dream University<br>
+			Is Not A Dream Anymore
+		</h1>
+		<p class = "para" align="center">TOP NOTCH EXPERTS | PERSONALIZED SERVICE | UNBEATABLE SUCCESS RATE</p>
+		<div id="searchbar">
+			<input class = "search"type="text" placeholder="Find Information about Universities, Courses, Exams, Careers and more" type="text">
+		</div>	
+		<div class="box">
+			<p>Get Free Expert Counseling</p>
+			<p>Contact Number</p>
+			<input class="mobile" type="" name="phone"placeholder="Enter your number">
+			<button class="button" onclick= "myFunction()" >Go</button>
+		</div>
 		<nav class="navbar">
 			<a href="#">How we Help</a>
 			<a href="#">Destinations</a>
@@ -17,7 +37,7 @@
 
 	</div>
 	<div class="middle">
-		
+
 	</div>
 	<div class="footer">
 		
