--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="box container-fluid">
 			<p>Get Free Expert Counseling</p>
 			<p>Contact Number</p>
-			<input class="mobile" type="" name="phone"placeholder="Enter your number">
+			<input class="mobile" type="text" name="phone"placeholder="Enter your number">
 			<button class="button" onclick= "myFunction()" >Go</button>
 		</div>
 		<nav class="navbar">
