--- a/index.html
+++ b/index.html
@@ -21,7 +21,153 @@
 		<div id="searchbar">
 			<input class = "search"type="text" placeholder="Find Information about Universities, Courses, Exams, Careers and more" type="text">
 		</div>	
-		<div class="box container-fluid">
+		<div class="box">
+			<p>Get Free Expert Counseling</p>
+			<p>Contact Number</p>
+			<input class="mobile" type="text" name="phone"placeholder="Enter your number">
+			<button class="button" onclick= "myFunction()" >Go</button>
+		</div>
+		<nav class="navbar">
+			<a href="#" id="anim">How we Help</a>
+			<a href="#" id="anim">Destinations</a>
+			<a href="#" id="anim">Tests</a>
+			<a href="#" id="anim">Resources</a>
+			<a href="#" id="anim" class ="border">Track Deadlines</a>
+			<a href="#" id="anim" class="border">Login/Sign-up</a>	
+		</nav>
+
+	</div>
+	<div class="middle"style="height:auto;"	>
+		<h2 style="background-color: silver;"class="next">Find The Next Right Step of Your Career
+		</h2>
+		<div id="names" style="height: auto;">
+				<div class="boxes" style="height:auto;">
+					<h5>School Students<br>
+					(9th-12th)</h5>
+					<ul>
+						<li>Not sure which stream to choose after 10th?</li>
+						<li>Confused about the right career for yourself?</li>
+						<li>Want to know if your hobbies can be turned into rewarding careers?</li>
+					</ul>
+					<a class="lm" href="#">Learn More</a>
+				</div>
+				<div class="boxes"style="height:auto;" >
+					<h5>School Students<br>
+					(Graduate-Postgraduate)</h5>
+					<ul>
+						<li>Confused about your goals and unsure about where to go?</li>
+						<li>Which career paths will bring you success?</li>
+						<li>Want to know which universities will lead you to the highest paying jobs?</li>
+					</ul>
+					<a class="lm" href="#">Learn More</a>
+				</div>
+				<div  class="boxes"style="height:auto;">
+					<h5>Working<br>
+						Professionals</h5>
+					<ul st>
+						<li>Still fighting for the promotion you deserve?</li>
+						<li>Wondering if it’s time to get back to the classroom?</li>
+						<li>Confused about the next step in your career path?</li>
+					</ul>
+					<a class="lm" href="#">Learn More</a>
+				</div>		
+		</div>
+		
+	</div>
+	<div class="footer">
+		<nav class="navbar2">
+			<a href="#" id = "anim">About</a>
+			<a href="#" id = "anim">Privacy Policy</a>
+			<a href="#" id = "anim">Terms & Conditions</a>
+			<a href="#" id = "anim">Become a Mentor</a>
+			<a href="#" id = "anim">Blog</a>
+			<a href="#" id = "anim">Carrers</a>
+		</nav>
+		<hr width="60%">
+
+		<div id = "ending">
+			<div id="boxes" >
+				<p>About us</p>
+				<p style="font-size: 19px;">Founded in 2017 by Akshay Chaturvedi, Leverage Edu is empowering students across India to choose the best-matched career & higher education options, with one-touch access to personalised mentors and leading global universities. Leverage Edu has been lauded as India’s most trusted university admissions company.</p>
+			</div>
+			<div id="boxes" >
+				<p>Why Leverage Edu?</p>
+				<p style="font-size: 19px;">Leverage Edu is a one-stop-shop for all your career-related needs - right from finding the best-fit university to helping you find accommodation at the best prices. With data-first approach at Leverage Edu, you get 100% customised services that resonate with your personal career needs..</p>
+			</div>
+			<div id="boxes" >
+				<p>What We Believe in</p>
+				<p style="font-size: 19px;">Each one of us has got something unique enough to be successful; we believe in bringing you closer to that ‘something’ and helping you leverage it!</p>
+			</div>
+			<div id="boxes" >
+				<p>New Delhi</p>
+				<p style="font-size: 19px;">Leverage Edu Tower,
+					A-258, Bhishma Pitamah Marg,
+					Block A, Defence Colony New Delhi,
+					Delhi 110024</p>
+			</div>
+			<div id="boxes" >
+				<p>Mumbai</p>
+				<p style="font-size: 19px;">Leverage Edu Mumbai,
+					91Springboard, Lotus Building
+					Plot No. D-5 Road No. 20, Marol MIDC,
+					Andheri East, Mumbai, Maharashtra 400069</p>
+			</div>
+			<div id="boxes" >
+				<p>Bengaluru</p>
+				<p style="font-size: 19px;">Leverage Edu Bangalore,
+					BHIVE Workspace
+					MG Road, Mahalakshmi Chambers, 29,
+					Next to Trinity Metro Station,
+					Bengaluru, Karnataka 560001</p>
+			</div>
+			<div id="boxes" >
+				<p>Ahemadabad</p>
+				<p style="font-size: 19px;">Leverage Edu Ahmedabad,
+					Uncubate CoWorking Space
+					1208, 12th Floor, Phoenix,
+					Commerce Six Rd,
+					Opp. Andhra Bank, Navrangpura,
+					Ahmedabad, Gujarat 380009</p>
+			</div>
+			<div id="boxes" >
+				<p>Hyderabad</p>
+				<p style="font-size: 19px;">Leverage Edu Hyderabad,
+					91springboard - Hitech Kondapur
+					Mytri Square, 2-41/11, 6/2,
+					Gachibowli Miyapur Rd Prashanth Nagar Colony,
+					Hyderabad, Telangana - 500084</p>
+			</div>
+		</div>
+		<p style="font-size: 20px;
+		font-family: cursive;
+		color: white;
+		text-align:center;">Copyright  2020, Leverage Edu. All rights reserved.</p>
+	</div>
+</body>
+</html><!DOCTYPE html>
+<html>
+<head>
+	<title>Leverage edu</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+
+</head>
+<body>
+	<script>
+	function myFunction() {
+  		alert("You presssed me");
+	}
+</script>
+	<div class="header">
+		<h1>
+			Your Dream University<br>
+			Is Not A Dream Anymore
+		</h1>
+		<p class = "para" align="center">TOP NOTCH EXPERTS | PERSONALIZED SERVICE | UNBEATABLE SUCCESS RATE</p>
+		<div id="searchbar">
+			<input class = "search"type="text" placeholder="Find Information about Universities, Courses, Exams, Careers and more" type="text">
+		</div>	
+		<div class="box">
 			<p>Get Free Expert Counseling</p>
 			<p>Contact Number</p>
 			<input class="mobile" type="text" name="phone"placeholder="Enter your number">
